--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://elinako.github.io/goit-js-hw-12-countries/"
 }
