--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
+    "gh-pages": "^2.2.0",
     "handlebars-loader": "^1.7.1",
     "handlebars-webpack-plugin": "^1.8.1",
     "html-loader": "^1.1.0",
@@ -30,7 +31,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
